<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/overview"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_cig_icon"
            android:title="@string/action_overview" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_timeline_black_48px"
            android:title="@string/action_statistics" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/history" />
    </group>
    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/reset_today"
            android:checkable="false"
            android:icon="@drawable/ic_restore_black_24dp"
            android:title="@string/reset_today" />
    </group>
    <group
        android:id="@+id/about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:checkable="false"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_signout"
            android:checkable="false"
            android:icon="@drawable/ic_account_circle_black"
            android:title="@string/sign_out"
            android:visible="false" />
    </group>
</menu>
