<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_statistics_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"></com.google.android.gms.ads.AdView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?attr/colorControlHighlight"
                    android:dividerPadding="15dp"
                    android:orientation="vertical"
                    android:showDividers="beginning|middle|end">

                    <Spinner
                        android:id="@+id/range_select"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:entries="@array/date_range" />

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/weekly_monthly_graph"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="10dp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/spentCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@android:color/black"
                    android:dividerPadding="15dp"
                    android:orientation="vertical"
                    android:showDividers="beginning|middle|end">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/spendings"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:baselineAligned="false"
                        android:divider="@color/primary_text"
                        android:dividerPadding="15dp"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:showDividers="beginning|middle|end">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="8dp">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:text="@string/today_spent"
                                android:textAlignment="center"
                                android:textAllCaps="true"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/todaySpent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:text="0"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                tools:ignore="HardcodedText" />

                        </android.support.constraint.ConstraintLayout>

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/this_month_spent"
                                android:textAlignment="center"
                                android:textAllCaps="true"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/monthSpent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:text="0"
                                android:textSize="20sp"
                                ads:layout_constraintLeft_toLeftOf="parent"
                                ads:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                tools:ignore="HardcodedText" />
                        </android.support.constraint.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>